membuat login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,14 @@
         <h2>User Login</h2>
     </div>
     <form action="/login-page" method="POST">
-      <input type="text" id="email" class="fadeIn second" name="email" placeholder="Username">
+      <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email">
       <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
-
+    {% if error != None %}
+      <p>{{ error }}</p>
+    {% endif %}
+    
     <!-- Remind Passowrd -->
     <div id="formFooter">
       <a class="underlineHover" href="/signup-page">Sign Up?</a>
